--- a/src/main/webapp/css/join.css
+++ b/src/main/webapp/css/join.css
@@ -4,14 +4,15 @@
 	font-family:'G마켓 산스';
 	font-weight: normal; 
 }
-html {
-    height: 100%;
-}
 
 body {
     margin: 0;
     height: 100%;
     background: #fff;
+}
+section{
+	height:50%;
+	
 }
 #logo {
     width: 240px;
@@ -19,7 +20,7 @@ body {
     cursor: pointer;
 }
 #header {
-    padding-top: 62px;
+    padding-top: 10px;
     padding-bottom: 20px;
     text-align: center;
 }
@@ -33,6 +34,7 @@ body {
     left: 50%;
     transform: translate(-50%);
     width: 460px;
+     background: #fff;
 }
 
 
@@ -89,33 +91,6 @@ h3 {
     margin-top: -10px;
     cursor: pointer;
 }
-
-#bir_wrap {
-    display: table;
-    width: 100%;
-}
-
-#bir_yy {
-    display: table-cell;
-    width: 147px;
-    
-}
-
-#bir_mm {
-    display: table-cell;
-    width: 147px;
-    vertical-align: middle;
-}
-
-#bir_dd {
-    display: table-cell;
-    width: 147px;
-}
-
-#bir_mm, #bir_dd {
-    padding-left: 10px;
-}
-
 
 
 select {
