--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -23,7 +23,6 @@ header{
 	display: flex;
 	justify-content: space-between;
 }
-
 a{
 text-decoration: none;
 color: black;
@@ -33,14 +32,18 @@ color: black;
     display: block;
     text-decoration: none;
 }
-
+/* main 메뉴바 컬러 */
 .amenu{
 	color: whitesmoke;
+}
+/* 각 페이지 메뉴바 컬러 */
+.almenu{
+	color: darkslategray;
 }
 
 .main_menu{
 	padding-top:30px;
-	padding-right: 20px;
+	padding-right: 30px;
 }
 .limenu{
 	margin:20px;
@@ -50,20 +53,110 @@ color: black;
 	font-size:16px;
 }
 
-
+/* main의 submenu style 컬러 */
 .listyle {
-	list-style-type:disc;
-	color: whitesmoke;
+	list-style-type:none;
+ 	color: whitesmoke; 
 }
-
+/* 각 페이지의 submenu style컬러 */
+.list{
+	list-style-type:none;
+	color: darkslategray;
+}
+/* main의 submenu 컬러 */
 .astyle {
 	font-size:13px;
 	color: whitesmoke;
 	text-decoration: none;
 }
-
+/* 각 페이지의 submenu 컬러 */
+.ast{
+	font-size:13px;
+	color: darkslategray;
+	text-decoration: none;
+}
 .subslide1, .subslide2, .subslide3, .subslide4{
 	margin-top: 5px;
-	padding-left: 5px;
+	padding-left: 10px;
 }
+.main_search_title{
+	font-size: 55px;
+	font-weight: bolder;
+	color: LightYellow;
+	font-family: 'esamanru OTF Medium';
+/* 	font-family: 'G마켓 산스'; */
+  
+}
+.main_search{
+	text-align: center;
+	margin-top: 100px;
+}
+
+.search_box{
+	width:100%;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	margin-top: 21px;
+}
+.search_box .search_box_form{
+	width:768px;
+	height:200px;
+	background-color: Goldenrod	;/*Goldenrod  */
+	opacity: 0.9;
+	z-index: 1000;
+	text-align: center;
+
+}
+
+.form1_1, .form1_2{
+	text-align: center;
+	padding: 30px 0 20px 30px;
+	margin-left: 20px;
+}
+
+.form1_1 input{
+	border: none;
+	width:430px;
+	font-size: 17px;
+	height:40px;
+	margin-right: 80px;
+}
+
+select, option{
+	border: none;
+	width:200px;
+	font-size: 14px;
+	height:40px;
+	margin-left: 30px;
+	font-size: 15px;
+	font-weight: normal;
+}
+
+.tt{
+ float: left;
+ margin-top: 7px;
+ 	font-size: 20px;
+ 	font-weight: bolder;
+ 	color:whitesmoke;
+}
+
+.form1_3{
+	text-align: center;
+	float: right;
+}
+
+#search_btn{
+	width:100px;
+	height:40px;
+	background-color: black;
+	color: whitesmoke;
+	border: none;
+	margin-right: 15px;
+}
+.seaction2{
+	background-color: white;
+	
+}
+
 
