--- a/src/main/webapp/css/review.css
+++ b/src/main/webapp/css/review.css
@@ -1,10 +1,30 @@
+@charset "UTF-8";
+*{
+	margin:0;
+	padding:0;
+	font-family:'G마켓 산스';
+	font-weight: normal; 
+}
+
+body{
+	background:#FFF;
+	margin: 0;
+    height: 100%;
+
+}
 .u-section-1 {
   background-image: linear-gradient(0deg, rgba(255,255,255,0.3), rgba(255,255,255,0.3)), url("images/36f53c3a746d2232cc32c000b2b6fb1d5e92dea804ebc0328d057dabd48c159e3c924db3f0583ffdf99d3c2920f3a53d1e73fde115f1534e38cf25_1280.jpg");
-  background-position: 50% 50%;
+/*   background-position: 50% 50%; */
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1085px;
+/*   min-height: 900px; */
+  	width:100%;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	margin-top: 21px;
+	text-align: center;
 }
 
 .u-section-1 .u-text-1 {
